<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount_SelectType">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/button_patient_type"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/light_blue_buttons"
        android:text="@string/patient_account_type"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.655" />

    <Button
        android:id="@+id/button_doctor_type"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/light_blue_buttons"
        android:text="@string/doctor_account_type"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/account_type_page1_background"
        android:layout_width="600dp"
        android:layout_height="680dp"
        android:layout_marginTop="81dp"
        android:background="@drawable/homepage_background"
        android:backgroundTint="@color/transparent_light_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/login_message"
        android:layout_width="281dp"
        android:layout_height="112dp"
        android:layout_marginBottom="484dp"
        android:gravity="center|center_horizontal"
        android:text="@string/select_account_type"
        android:textAlignment="center"
        android:textColor="@color/dark_blue_buttons"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/account_type_page1_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

    <ImageView
        android:id="@+id/image_med_meals"
        android:layout_width="232dp"
        android:layout_height="66dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/medmeals_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_back_create_account_select"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="86dp"
        android:layout_height="55dp"
        android:backgroundTint="#FFFFFF"
        android:text="&lt; Back"
        android:textColor="@color/dark_blue_buttons"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>