<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/button_login_submit"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/light_blue_buttons"
        android:text="@string/login_submit"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785" />

    <TextView
        android:id="@+id/account_type_page1_background"
        android:layout_width="600dp"
        android:layout_height="680dp"
        android:layout_marginTop="81dp"
        android:background="@drawable/homepage_background"
        android:backgroundTint="@color/transparent_light_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/login_message"
        android:layout_width="281dp"
        android:layout_height="112dp"
        android:layout_marginBottom="484dp"
        android:gravity="center|center_horizontal"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/dark_blue_buttons"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/account_type_page1_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802" />

    <TextView
        android:id="@+id/enter_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="296dp"
        android:layout_marginBottom="3dp"
        android:text="@string/enter_user"
        android:textColor="@color/dark_blue_buttons"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/enter_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="8dp"
        android:text="@string/enter_pass"
        android:textColor="@color/dark_blue_buttons"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_user"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="314dp"
        android:layout_height="46dp"
        android:padding="10dp"
        android:background="@drawable/rounded_corner"
        android:hint="  Ex: User123"
        android:textColorHighlight="#FBFBFB"
        app:layout_constraintBottom_toBottomOf="@+id/account_type_page1_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="314dp"
        android:layout_height="46dp"
        android:padding="10dp"
        android:background="@drawable/rounded_corner"
        android:hint="  Ex: password1234"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/account_type_page1_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username"
        app:layout_constraintVertical_bias="0.207"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/image_med_meals"
        android:layout_width="229dp"
        android:layout_height="65dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/medmeals_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_back_login"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="86dp"
        android:layout_height="55dp"
        android:backgroundTint="#FFFFFF"
        android:text="&lt; Back"
        android:textColor="@color/dark_blue_buttons"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>